--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "project--dc-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "build": "tsc",
     "start": "node build/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon build/server.js\"",
     "deploy:commands": "tsc && node build/deploy-commands.js"
   },
   "keywords": [],
@@ -16,11 +16,13 @@
     "@types/express": "^4.17.17",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.4"
   },
   "dependencies": {
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.2.2"
   }
 }
