--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "build": "tsc",
     "start": "node build/index.js",
     "dev": "concurrently \"tsc -w\" \"nodemon build/server.js\"",
-    "deploy:commands": "tsc && node build/deploy-commands.js"
+    "deploy:commands": "tsc && node build/deploy-commands.js",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "concurrently": "^8.0.1",
+    "eslint": "^8.41.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
