--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon build/server.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
     "deploy:commands": "tsc && node build/deploy-commands.js",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
@@ -21,12 +21,17 @@
     "eslint": "^8.41.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
+    "@types/node": "^20.2.5",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "googleapis": "^105.0.0",
+    "mongoose": "^7.2.2",
+    "ts-node": "^10.9.1"
   }
 }
