--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.3",
     "ejs": "^3.1.9",
+    "eslint-plugin-prettier": "^4.2.1",
     "express": "^4.18.2",
     "googleapis": "^105.0.0",
     "mongoose": "^7.2.2",
