implemented calendar webhook

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "node build/index.js",
         "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
         "deploy:commands": "tsc && node build/deploy-commands.js",
+        "create:channel": "tsc && node build/create-channel.js",
         "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
     },
     "keywords": [],
