--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "src/server.ts",
     "scripts": {
         "build": "tsc",
-        "start": "tsc && node build/index.js",
+        "start": "node build/write-creds.js && node build/deploy-commands.js && node build/index.js",
         "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
-        "deploy-commands": "tsc && node build/deploy-commands.js",
-        "create-channel": "tsc && node build/create-channel.js",
+        "deploy-commands": "node build/deploy-commands.js",
+        "write-creds": "node build/write-creds.js",
         "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
     },
     "keywords": [],
@@ -32,6 +32,7 @@
         "dotenv": "^16.3.1",
         "eslint-plugin-prettier": "^4.2.1",
         "express": "^4.18.2",
+        "google-auth-library": "^8.9.0",
         "googleapis": "^118.0.0",
         "ts-node": "^10.9.1"
     }
