--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "",
     "main": "src/server.ts",
     "scripts": {
+        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+        "prebuild": "npm run prettier-format",
         "build": "tsc",
-        "start": "tsc && node build/index.js",
+        "prestart": "npm run build",
+        "start": "node build/index.js",
+
         "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
         "deploy-commands": "tsc && node build/deploy-commands.js",
-        "create-channel": "tsc && node build/create-channel.js",
-        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
+        "create-channel": "tsc && node build/create-channel.js"
     },
     "keywords": [],
     "author": "",
@@ -23,16 +26,16 @@
         "eslint": "^8.43.0",
         "nodemon": "^2.0.22",
         "prettier": "^2.8.8",
-        "typescript": "^5.1.3"
+        "typescript": "^5.1.3",
+        "@types/node": "^20.3.1",
+        "ts-node": "^10.9.1",
+        "eslint-plugin-prettier": "^4.2.1"
     },
     "dependencies": {
-        "@types/node": "^20.3.1",
         "cron": "^2.3.1",
         "discord.js": "^14.11.0",
         "dotenv": "^16.3.1",
-        "eslint-plugin-prettier": "^4.2.1",
         "express": "^4.18.2",
-        "googleapis": "^118.0.0",
-        "ts-node": "^10.9.1"
+        "googleapis": "^118.0.0"
     }
 }
