--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         include:
           - context: .
-            image: discordbot
+            image: gdscbot
             dockerfile: Dockerfile
 
     steps:
