--- a/.example.env
+++ b/.example.env
@@ -6,6 +6,7 @@ CALENDAR_ID=<google calendar id>
 SYNC_ID=<id of the channel to receive weekly sync pings>
 ANNOUNCEMENT_ID=<id of the channel to receive announcements>
 PING_ROLE_IDS=<id of roles to ping (space separated)>
-URL=<API endpoint url>
-UUID=<UUID>
-PORT=<PORT>
+CREDENTIALS=<google services account json credentials>
+# URL=<API endpoint url>
+# UUID=<UUID>
+# PORT=<PORT>
