--- a/.example.env
+++ b/.example.env
@@ -6,7 +6,7 @@ CALENDAR_ID=<google calendar id>
 SYNC_ID=<id of the channel to receive weekly sync pings>
 ANNOUNCEMENT_ID=<id of the channel to receive announcements>
 PING_ROLE_IDS=<id of roles to ping (space separated)>
-CREDENTIALS=<google services account json credentials>
+CREDENTIALSJSON=<google services account json credentials>
 # URL=<API endpoint url>
 # UUID=<UUID>
 # PORT=<PORT>
