--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: '3.3'
 services:
   gdscbot:
     # image: ghcr.io/dyzhuu/gdscbot:latest
@@ -15,6 +15,8 @@ services:
       - CALENDAR_ID
       - SYNC_CHANNEL_ID
       - ANNOUNCEMENT_CHANNEL_ID
+      - PRESIDENT_ID
+      - TREASURER_ID
       - PING_ROLE_IDS
       - CREDENTIALS_JSON
   autoheal:
