--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-    "name": "gdscbot",
-    "version": "1.0.0",
-    "description": "",
-    "main": "src/server.ts",
-    "scripts": {
-        "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-        "prebuild": "npm run prettier-format",
-        "build": "tsc",
-        "start": "node build/write-creds.js && node build/deploy-commands.js && node build/index.js",
-        "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\"",
-        "deploy-commands": "tsc && node build/deploy-commands.js",
-        "create-channel": "tsc && node build/create-channel.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/cron": "^2.0.1",
-        "@types/express": "^4.17.17",
-        "@typescript-eslint/eslint-plugin": "^5.60.0",
-        "@typescript-eslint/parser": "^5.60.0",
-        "concurrently": "^8.2.0",
-        "eslint": "^8.43.0",
-        "nodemon": "^2.0.22",
-        "prettier": "^2.8.8",
-        "typescript": "^5.1.3",
-        "@types/node": "^20.3.1",
-        "ts-node": "^10.9.1",
-        "eslint-plugin-prettier": "^4.2.1"
-    },
-    "dependencies": {
-        "cron": "^2.3.1",
-        "discord.js": "^14.11.0",
-        "dotenv": "^16.3.1",
-        "express": "^4.18.2",
-        "googleapis": "^118.0.0"
-    }
+  "name": "gdscbot",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/server.ts",
+  "scripts": {
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "prebuild": "npm run prettier-format",
+    "build": "tsc",
+    "start": "node build/write-creds.js && node build/deploy-commands.js && node build/bot.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon build/bot.js\"",
+    "deploy-commands": "tsc && node build/deploy-commands.js",
+    "create-channel": "tsc && node build/create-channel.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/cron": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "concurrently": "^8.2.0",
+    "eslint": "^8.43.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "typescript": "^5.1.3",
+    "@types/node": "^20.3.1",
+    "ts-node": "^10.9.1",
+    "eslint-plugin-prettier": "^4.2.1"
+  },
+  "dependencies": {
+    "cron": "^2.3.1",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "googleapis": "^118.0.0"
+  }
 }
