--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
     "start": "node build/write-creds.js && node build/deploy-commands.js && node build/bot.js",
     "dev": "concurrently \"tsc -w\" \"nodemon build/bot.js\"",
     "deploy-commands": "tsc && node build/deploy-commands.js",
-    "create-channel": "tsc && node build/create-channel.js"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cron": "^2.0.1",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "concurrently": "^8.2.0",
     "eslint": "^8.43.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "typescript": "^5.1.3",
-    "@types/node": "^20.3.1",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "eslint-plugin-prettier": "^4.2.1"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "cron": "^2.3.1",
